# django-sigmanetauth-client

./: .gitignore  LICENSE  MANIFEST.in  README.MD  README.rst  manage.py  requirements.txt  setup.cfg
client/: client.py
client/factory/: models.py
dango_sigmanetauth_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_sigmanetauth_client/: asgi.py  settings.py  urls.py  wsgi.py
sigmanetauth/: apps.py
sigmanetauth/client/: client.py
sigmanetauth/client/factory/: models.py
sigmanetauth/client/middleware/: oauth.py
